[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Die.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/1.png" type="Texture" id=2]
[ext_resource path="res://src/Collision.gd" type="Script" id=4]
[ext_resource path="res://src/MouseDetector.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.3001, 32.7932 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.4583, 30.1362 )

[node name="Die" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Collision" type="KinematicBody2D" parent="."]
collision_layer = 688128
collision_mask = 688128
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource( 1 )

[node name="Top" type="RayCast2D" parent="Collision"]
enabled = true
cast_to = Vector2( 0, -50 )
collision_mask = 2147614736

[node name="Bottom" type="RayCast2D" parent="Collision"]
enabled = true
collision_mask = 2147614736

[node name="Left" type="RayCast2D" parent="Collision"]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2147614736

[node name="Right" type="RayCast2D" parent="Collision"]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2147614736

[node name="Tween" type="Tween" parent="."]

[node name="MouseDetector" type="Area2D" parent="."]
z_index = 10
priority = 4.0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetector"]
shape = SubResource( 2 )

[node name="SpriteHolder" type="Node2D" parent="MouseDetector"]
modulate = Color( 1, 1, 1, 0 )
z_index = 5

[node name="Left" type="Sprite" parent="MouseDetector/SpriteHolder"]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( -64, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Right" type="Sprite" parent="MouseDetector/SpriteHolder"]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 64, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Top" type="Sprite" parent="MouseDetector/SpriteHolder"]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 0, -64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Bottom" type="Sprite" parent="MouseDetector/SpriteHolder"]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 0, 64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="MouseDetector"]
[connection signal="mouse_entered" from="MouseDetector" to="MouseDetector" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="MouseDetector" method="_on_mouse_exited"]
